LPIS_1/src/main/java/com/example/lab/statement/error/SemanticError.java
package com.example.lab.statement.error;

import java.io.PrintStream;

public interface SemanticError {
	
	void show(PrintStream out);
	
	default boolean isOK() {
		return false;
	}
	
	SemanticError merge(SemanticError other);
}
